[project]
name = "eml-rename"
version = "1.0.0"
description = "Script renames all eml files in a directory using mail metadata"
authors = [{name = "turulomio", email = "turulomio@yahoo.es"}]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "colorama>=0.4.6",
    "chardet>=5.2.0",
    "tqdm>=4.67.1",
    "pydicts >=1.1.0",
    "google-genai>=0.6.0",
]


[project.scripts]
eml_rename = "eml_rename.core:main"

[tool.poetry.group.dev.dependencies]
poethepoet = ">=0.32.1"
pytest = "^9.0.2"
coverage = "^7.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
release = { script = "eml_rename.poethepoet:release" }
translate = { script = "eml_rename.poethepoet:translate" }
coverage = { script = "eml_rename.poethepoet:coverage" }
video = { script = "eml_rename.poethepoet:video" }

[project.urls]
homepage = "https://github.com/turulomio/eml_rename/"
repository = "https://github.com/turulomio/eml_rename/"
changelog = "https://github.com/turulomio/eml_rename#changelog"
